# ibtax_web_ui

./: .flake8  README.md  pyproject.toml
.github/workflows/: tests.yml
tests/: conftest.py  test_webapp.py
web_ui/: __init__.py  webapp.py
web_ui/templates/: index.html
