[tool.poetry]
name = "ibtax_web_ui"
version = "0.1.0"
description = ""
authors = ["Simon <spam@esemi.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.2"
uvicorn = "^0.13.3"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
