[tool.poetry]
name = "ibtax_web_ui"
version = "0.1.0"
description = ""
authors = ["Simon <spam@esemi.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.2"
uvicorn = "^0.13.3"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-asyncio = "^0.14.0"
pytest-mock = "^3.5.1"
wemake-python-styleguide = "^0.15.0"
requests = "^2.25.1"
timing-asgi = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
